# SNN_Development_for_NeuroHardware

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  TRAINING_EXPERIMENTS.md  environment.yml  pyproject.toml  requirements.txt
configs/: lob_alpha.yaml
configs/template/: default.yaml
docs/: benchmark_tasks.md  multistream_cross_asset_snn.md  operator_guide_sentinel.md  roadmap_snn_expansion.md
scripts/: cache_market_data.sh  full_pipeline.sh  generate_multistream_demo_data.py  lob_cli.py  run_experiments.sh  run_multistream_ablation.sh  smoke_pipeline.sh  train.sh  train_all_models_tasks.sh  train_multistream.sh  train_task_relevant_models.sh
snn_bench/: __init__.py
snn_bench/configs/: __init__.py  default.yaml  settings.py
snn_bench/data_connectors/: __init__.py  backtest_store.py  massive_client.py  snapshot_cache.py
snn_bench/eval/: __init__.py  metrics.py  reporting.py  repro_eval.py
snn_bench/execution_policy/: __init__.py  constraints.py  dataset.py  eval.py  features.py  model.py  schema.py  trainers.py
src/: __init__.py
tests/: test_bio_metrics.py  test_cache_market_data_skip.py  test_experiment_runner.py  test_forecast_features.py  test_hybrid_quant_stack.py  test_massive_client_pagination.py  test_model_zoo.py  test_multistream_leadlag.py  test_multistream_walk_forward.py  test_prediction_artifacts_metadata.py  test_regime_switching_models.py  test_repo_layout.py  test_reporting.py  test_repro_eval.py  test_secrets.py  test_sentinel_pipeline.py  test_task_configs.py  test_task_registry.py  test_train_guardrails.py
(+108 files in other folders)
