[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snn-bench"
version = "0.1.0"
description = "Modular spiking neural network benchmark framework for quant tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "scipy>=1.12",
  "torch>=2.2",
  "snntorch>=0.8",
  "norse>=1.0.0",
  "spikingjelly>=0.0.0.0.14",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "pyyaml>=6.0",
  "rich>=13.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
lightning = ["pytorch-lightning>=2.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snn_bench*"]

[project.scripts]
export-neuromorphic = "snn_bench.scripts.export_neuromorphic:main"
hybrid-quant = "snn_bench.hybrid.cli:main"
